brain/sources/prod-metadata/objects/Candidate_Portal_Credential__c/Candidate_Portal_Credential__c.object-meta.xml
<CustomObject>
    <label>Candidate Portal Credential</label>
    <nameField>
        <displayFormat>CCN-{00000}</displayFormat>
        <label>Candidate Credentials Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Portal Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>