brain/sources/prod-metadata/objects/Candidate_Portal_Credential__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidate Portal Credentials</relationshipLabel>
    <relationshipName>Candidate_Portal_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>