brain/sources/prod-metadata/objects/Candidate_Portal_Credential__c/fields/Failed_Login_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Login_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Login Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>