brain/sources/prod-metadata/objects/Candidate_Portal_Credential__c/fields/Locked_Until__c.field-meta.xml
<CustomField>
    <fullName>Locked_Until__c</fullName>
    <label>Locked Until</label>
    <type>DateTime</type>
</CustomField>