brain/sources/prod-metadata/objects/Candidate_Portal_Credential__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>